[PE] Don't paint composited resizer twice

The bug was exposed by removal of cache generation mechanism of paint
controller. Before that, objects painted onto different paint
controllers were always implicitly invalidated in one of the paint
controllers due to cache generation mismatch. The bug exposed because we
don't invalidate resizer in the main graphics layer on container resize
if the resizer is composited.

We should not paint composited resizer on the main graphics layer.

Bug: 902697
Change-Id: Ia6eefe687d79a4a787528c3ccb391c57f649a911
Reviewed-on: https://chromium-review.googlesource.com/c/1329803
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607094}